<resources>
    <string name="app_name">PM-WANI</string>
    <string name="login_text">Login With Phone</string>
    <string name="register_text">Register New Account</string>
    <string name="proceed_text">Proceed</string>
    <string name="Glad_to_see">Glad to see</string>
    <string name="you_again">you again !</string>
    <string name="phone_number">Phone Number</string>
    <string name="or">OR</string>
    <string name="Rs">\u20B9</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="mobile_number_error_message">Invalid Mobile Number</string>
    <string name="not_yet_register">Not Register Yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_up_and">Sign Up And</string>
    <string name="start_using_wifi">Start Using WIFI</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last name</string>
    <string name="hint_email">Email Address</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="resend_code_in">Resend Code In</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="setup_your">Setup Your</string>
    <string name="fa_pin">2FA PIN</string>
    <string name="enter_pin">Enter Your PIN</string>
    <string name="reenter_pin">Re-Enter Your PIN</string>
    <string name="add_your">Add Your</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="scanner_message">"Scanning &#8230;"</string>
    <string name="action_access_points">"Access Points"</string>
    <string name="no_data">"No Data"</string>
    <string name="no_data_msg">"Please visit frequently ask questions section on our website."</string>
    <string name="no_data_url" translatable="false">"https://vremsoftwaredevelopment.github.io/WiFiAnalyzer/#faq"</string>
    <string name="permission_msg">"As of Android Marshmallow, location permissions are required to perform a Wi-Fi scan. You will be prompted to enable location services/permissions. Since this app does not require internet access, you can be confident that this app cannot transmit your location!"</string>
    <string name="location_msg">"This app can get your precise location from location services while the app is in use. Location services for your device must be turned on for the app to get location. This may increase battery usage."</string>
    <string name="throttling_msg">"Android 9 introduced Wi-Fi scan throttling. Android 10 has a new developer option to toggle the throttling off under (Settings > Developer Options > Networking > Wi-Fi scan throttling)."</string>
    <string name="channel_short_name">"CH"</string>
    <string name="mc_flag" translatable="false">"802.11mc"</string>
    <string name="country_code_title">"Country"</string>
    <string name="country_code_summary" translatable="false">"%s"</string>
    <string name="country_code_key" translatable="false">"country_code"</string>
    <string name="wifi_band_key" translatable="false">"wifi_band"</string>
    <string name="scan_speed_title">"Scan Interval"</string>
    <string name="scan_speed_summary">"%s seconds between each scan"</string>
    <string name="scan_speed_key" translatable="false">"scan_speed"</string>
    <string name="scan_speed_default" translatable="false">"5"</string>
    <string name="cache_off_title" translatable="false">"Cache off"</string>
    <string name="cache_off_key" translatable="false">"cache_off"</string>
    <string name="experimental_title" translatable="false">"Experimental"</string>
    <string name="experimental_key" translatable="false">"experimental_key"</string>
    <string name="sort_by_title">"Sort Access Points By"</string>
    <string name="sort_by_summary" translatable="false">"%s"</string>
    <string name="sort_by_key" translatable="false">"sort_by"</string>
    <string name="sort_by_default" translatable="false">"0"</string>
    <string name="sort_by_signal_strength">"Signal Strength"</string>
    <string name="sort_by_ssid" translatable="false">"SSID"</string>
    <string name="sort_by_channel">"Channel"</string>
    <string name="group_by_title">"Group Access Points By"</string>
    <string name="group_by_summary" translatable="false">"%s"</string>
    <string name="group_by_key" translatable="false">"group_by"</string>
    <string name="group_by_default" translatable="false">"0"</string>
    <string name="group_by_none">"None"</string>
    <string name="group_by_ssid" translatable="false">"SSID"</string>
    <string name="group_by_channel">"Channel"</string>
    <string name="group_by_virtual">"Virtual"</string>
    <string name="connection_view_title">"Connection Display"</string>
    <string name="connection_view_summary" translatable="false">"%s"</string>
    <string name="connection_view_key" translatable="false">"connection"</string>
    <string name="connection_view_default" translatable="false">"1"</string>
    <string name="connection_view_complete">"Complete"</string>
    <string name="connection_view_compact">"Compact"</string>
    <string name="connection_view_hide">"Hide"</string>
    <string name="ap_view_title">"Access Point Display"</string>
    <string name="ap_view_summary" translatable="false">"%s"</string>
    <string name="ap_view_key" translatable="false">"view"</string>
    <string name="ap_view_default" translatable="false">"0"</string>
    <string name="ap_view_complete">"Complete"</string>
    <string name="ap_view_compact">"Compact"</string>
    <string name="graph_maximum_y_title">"Graph Maximum Signal Strength"</string>
    <string name="graph_maximum_y_summary" translatable="false">"%s"</string>
    <string name="graph_maximum_y_key" translatable="false">"graph_maximum_y"</string>
    <string name="graph_maximum_y_default" translatable="false">"2"</string>
    <string name="channel_graph_legend_title">"Channel Graph Legend Display"</string>
    <string name="channel_graph_legend_summary" translatable="false">"%s"</string>
    <string name="channel_graph_legend_key" translatable="false">"channel_graph_legend"</string>
    <string name="channel_graph_legend_default" translatable="false">"2"</string>
    <string name="time_graph_legend_title">"Time Graph Legend Display"</string>
    <string name="time_graph_legend_summary" translatable="false">"%s"</string>
    <string name="time_graph_legend_key" translatable="false">"time_graph_legend"</string>
    <string name="time_graph_legend_default" translatable="false">"0"</string>
    <string name="graph_legend_left">"Left"</string>
    <string name="graph_legend_right">"Right"</string>
    <string name="graph_legend_hide">"Hide"</string>
    <string name="theme_title">"Theme"</string>
    <string name="theme_summary" translatable="false">"%s"</string>
    <string name="theme_key" translatable="false">"theme"</string>
    <string name="theme_default" translatable="false">"0"</string>
    <string name="theme_dark">"Dark"</string>
    <string name="theme_light">"Light"</string>
    <string name="theme_system">"System"</string>
    <string name="wifi_off_on_exit_title">"Wi-Fi off on Exit"</string>
    <string name="wifi_off_on_exit_key" translatable="false">"wifi_off_on_exit"</string>
    <string name="keep_screen_on_title">"Keep screen on"</string>
    <string name="keep_screen_on_key" translatable="false">"keep_screen_on"</string>
    <string name="language_title">"Language"</string>
    <string name="language_summary" translatable="false">"%s"</string>
    <string name="language_key" translatable="false">"language"</string>
    <string name="wifi_band_2ghz" translatable="false">"2.4 GHz"</string>
    <string name="wifi_band_5ghz" translatable="false">"5 GHz"</string>
    <string name="wifi_band_6ghz" translatable="false">"6 GHz"</string>
    <string name="wifi_standard_unknown" translatable="false">""</string>
    <string name="wifi_standard_legacy" translatable="false">"Wi-Fi 802.11a/b/g"</string>
    <string name="wifi_standard_n" translatable="false">"Wi-Fi 802.11n"</string>
    <string name="wifi_standard_ac" translatable="false">"Wi-Fi 802.11ac"</string>
    <string name="wifi_standard_ax" translatable="false">"Wi-Fi 802.11ax"</string>
    <string name="wifi_standard_ad" translatable="false">"Wi-Fi 802.11ad"</string>
    <string name="wifi_standard_be" translatable="false">"Wi-Fi 802.11be"</string>
    <string name="filter_ssid_key" translatable="false">"filter_ssid"</string>
    <string name="filter_wifi_band_key" translatable="false">"filter_wifi_band"</string>
    <string name="filter_strength_key" translatable="false">"filter_strength"</string>
    <string name="filter_security_key" translatable="false">"filter_security"</string>
    <string name="btn_pay">PAY</string>
    <string name="str_srh_payment_method">Search for your bank</string>
    <string name="validation_name_only_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="title_fragment_more">More</string>
    <string name="btn_back">Back</string>
    <string name="btn_submit">Submit</string>
    <string name="card_no">Card Number</string>
    <string name="valid_thru">Valid Thru</string>
    <string name="todo">TODO</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="cvv_des">It\'s a 3 digit code printed on the back of your card </string>
    <string name="card_cvv">CVV</string>
    <string name="card_name">Card Name</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="payment_success_label1">Congratulations</string>
    <string name="payment_success_label2">Payment Successful</string>
    <string name="payment_success_transaction_id">Transaction Id :</string>
    <string name="payment_success_total_amount">Total Amount :</string>
    <string name="mticket_booking_id_label">Order ID : </string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="rs1">\u20B9</string>
    <string name="title_activity_credit_debit_card">Credit/Debit Card</string>
    <string name="title_activity_upi">Upi</string>
    <string name="title_activity_select_bank">Net Banking</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="payment_status_failed">Failed</string>
    <string name="payment_status_pending">Pending</string>
    <string name="payment_title_success">Thank You</string>
    <string name="payment_title_failed">Failed</string>
    <string name="payment_title_pending">Payment Pending</string>
    <string name="payment_msg_empty_order_id">Please try again.</string>
    <string name="payment_msg_no_internet">No internet connection! Please try again.</string>
    <string name="payment_msg_error">Error while making payment. Please try after sometime.</string>
    <string name="payment_msg_cancel">Payment is cancelled.</string>
    <string name="payment_msg_success_no_internet">We Received your payment successfully but due to no internet we cannot process. Please contact us on info@matrubharti.com </string>
    <string name="title_activity_select_payment">Select Payment</string>
    <string name="msg_no_internet">No internet connection! Please try again.</string>
    <string name="msg_no_internet_mini">No internet connection!</string>
    <string name="otp_verification_label1">Enter one time password</string>
    <string name="otp_verification_label2">(OTP)</string>
    <string name="otp_verification_pin">PIN</string>
    <string name="btn_close">Close</string>
</resources>