<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/card_cvv"
            android:textAllCaps="true"
            android:textColor="@color/purchase_ticket_edittext_textColor"
            android:textSize="@dimen/purchase_ticket_terms_title_textSize" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/cvv_image" />

        <TextView
            android:id="@+id/tvItemText"
            style="@style/editTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:text="@string/cvv_des"
            android:textColor="@color/purchase_ticket_edittext_textColor"
            android:textSize="@dimen/purchase_ticket_terms_desc_textSize" />
    </LinearLayout>

</LinearLayout>
